--- a/cookie-recipe.html
+++ b/cookie-recipe.html
@@ -13,10 +13,10 @@
     <p>This recipe is from my dad and they are a favorite among friends and family. The secret ingredient is the coconut! <em>Be warned</em>, these will fly off of the plate!</p>
 
     <button id="button1" type="button">
-    Invert Page Colors
+    Invert Page Colors!
     </button>
     <button id="button2" type="button">
-    Revert Page Colors
+    Revert Page Colors!
     </button>
 
     <h2 class="h2styles">Ingredients</h2>
