Add 2 buttons to show/hide cookie image on cookie-recipe.html

--- a/cookie-recipe.html
+++ b/cookie-recipe.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1 id="specialHeader">Best Chocolate Chip Cookies</h1>
-    <img src="https://static01.nyt.com/images/2022/02/12/dining/JT-Chocolate-Chip-Cookies/JT-Chocolate-Chip-Cookies-articleLarge.jpg" alt="An image of a cookie"/>
+    <img id="image" src="https://static01.nyt.com/images/2022/02/12/dining/JT-Chocolate-Chip-Cookies/JT-Chocolate-Chip-Cookies-articleLarge.jpg" alt="An image of a cookie"/>
 
     <p>This recipe is from my dad and they are a favorite among friends and family. The secret ingredient is the coconut! <em>Be warned</em>, these will fly off of the plate!</p>
 
@@ -18,6 +18,12 @@
     <button id="button2" type="button">
     Revert Page Colors!
     </button>
+    <button id="button3" type="button">
+      Hide Image
+      </button>
+      <button id="button4" type="button">
+        Show Image
+        </button>
 
     <h2 class="h2styles">Ingredients</h2>
     <ul class="ul-style">
